--- a/src/main/resources/templates/users/friends.html
+++ b/src/main/resources/templates/users/friends.html
@@ -13,13 +13,17 @@
 <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 <div class="container p-3 text-black rounded my-5 bg-white">
     <input type="hidden" id="myUsername" th:value="${me.username}">
-    <div class="navbar d-flex justify-content-end pe-3">
-        <span class="h2 me-auto ms-3"><i class="bi bi-people-fill me-3"></i>Manage Buddies</span>
-    </div>
     <div class="row mt-4">
         <!-- Filtering and Lists -->
+        <div class="d-flex justify-content-end pe-3">
+
+          </div>
         <div class="friends-list col-12 col-md-4">
             <fieldset class="mb-3">
+                <span class="h2 me-auto ms-3"><i class="bi bi-people-fill me-3"></i>Manage Buddies</span>
+                <br>
+                <br>
+                <br>
                 <legend>Filter by Points</legend>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
@@ -115,7 +119,7 @@
             }
         }
 
-        const endpoint = "https://" + window.location.host + "/users/api/v1/search_friends";
+        const endpoint = "http://" + window.location.host + "/users/api/v1/search_friends";
         console.log(endpoint)
         console.log(token)
         //Create a post request to the backend
@@ -194,7 +198,7 @@
                         console.log("Unfriend request for " + username.innerText)
 
                         //Fetch request to the unfriend route
-                        const request = await fetch("https://" + location.host + "/users/api/v1/unfriend_request", {
+                        const request = await fetch("http://" + location.host + "/users/api/v1/unfriend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -287,7 +291,7 @@
                         e.preventDefault();
                         console.log("Deleting pending sent friend request for " + username.innerText)
 
-                        const request = await fetch("https://" + location.host + "/users/api/v1/delete_friend_request", {
+                        const request = await fetch("http://" + location.host + "/users/api/v1/delete_friend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -377,7 +381,7 @@
                         console.log("Accepting friend request from " + username.innerText)
 
                         //Create a request to accept the friend request
-                        const request = await fetch("https://" + location.host + "/users/api/v1/accept_friend_request", {
+                        const request = await fetch("http://" + location.host + "/users/api/v1/accept_friend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -405,7 +409,7 @@
                         console.log("Denying friend request from " + username.innerText)
 
                         //Create a request to deny the friend request
-                        const request = await fetch("https://" + location.host + "/users/api/v1/deny_friend_request", {
+                        const request = await fetch("http://" + location.host + "/users/api/v1/deny_friend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -474,7 +478,7 @@
                     e.preventDefault();
 
                     const sendFriendRequest = async u => {
-                        const endp = "https://" + location.host + "/users/api/v1/add_friend"
+                        const endp = "http://" + location.host + "/users/api/v1/add_friend"
 
                         const request = await fetch(endp, {
                             method: "POST",
@@ -567,7 +571,7 @@
                     unblockButton.onclick = async e => {
                         e.stopPropagation();
                         e.preventDefault();
-                        const request = await fetch("https://" + location.host + "/users/api/v1/unblock_request", {
+                        const request = await fetch("http://" + location.host + "/users/api/v1/unblock_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -615,7 +619,7 @@
                         //TODO: Send unfriend request
                         console.log("Unfriending " + username.innerText);
 
-                        const request = await fetch("https://" + location.host + "/users/api/v1/unfriend_request", {
+                        const request = await fetch("http://" + location.host + "/users/api/v1/unfriend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
