added konami weehoo

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -3,6 +3,7 @@
        xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <th:block th:replace="~{fragments/header.html :: header}"/>
     <title>HealthPointsFitness.us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
