--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/css/chat.css">
   <link href="/css/main.css" rel="stylesheet">
   <link rel="icon" href="/favicon.ico" type="image/ico">
-
+  <script src="/js/konami.js" defer></script>
 </th:block>
 
 </html>
