notes on aboutus page

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -13,6 +13,7 @@
 
 <div class="container my-5 bg-light rounded">
 
+  <!-- Banner -->
   <div class="d-flex justify-content-center">
     <h1 class="mt-3">About The </h1>
     <img src="img/logo.gif" style="width: 120px;" class="mx-4 mt-3">
@@ -20,8 +21,9 @@
   </div>
 
   <p class="mt-3">Health Points Fitness is a full-stack application created by four student veterans meant to incentivize fitness and facilitate connections of like-minded individuals. The coding languages utilized in this application include Java, Javascript, HTML, and CSS.  Frameworks include Bootstrap css and Thymeleaf.  API Ninja's Exercise API is utilized during the creation of challenges. The deployment of the site was handled using Dokku.</p>
-  <h2 class="text-center mt-5">Meet the Developers</h2>
 
+
+  <h2 class="text-center mt-5">Meet the Developers</h2>
 
   <div class="row d-flex justify-content-center">
     <!-- Hector Card -->
