added instructions modal for exercises on the edit path exercises list

--- a/src/main/resources/templates/admin/path/edit.html
+++ b/src/main/resources/templates/admin/path/edit.html
@@ -19,7 +19,7 @@
 
   <!-- Title Navbar-->
   <div class="navbar bg-body-tertiary">
-    <a href="/admin/index">
+    <a href="/admin/landing">
       <button class="btn btn-light">
         <i class="bi bi-arrow-left-square"></i>
       </button>
@@ -124,6 +124,24 @@
     </div>
   </div>
 
+  <!-- Exercise Description Modal -->
+  <div id="instructionModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 id="exerciseInstructionTitle" class="modal-title fs-5">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div id="modal-body" class="modal-body">
+          <!-- Filled by JS -->
+        </div>
+        <div class="modal-footer">
+          <button id="exerciseInstructionClose" type="button" class="btn btn-secondary">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!--Add Exercise Modal -->
   <div id="add_exercise_modal" class="modal">
     <div class="modal-dialog">
@@ -202,7 +220,9 @@
     keyboard : false
   })
 
-
+  const instructionModal = new bootstrap.Modal('#instructionModal',{
+    keyboard : false
+  })
 
   //========= Variables and Constants ===============
   let exercises = []
@@ -357,17 +377,24 @@
     //Create a container to hold the exercise list item
     const item = document.createElement('div')
 
-    // item.classList.add("accordion-item")
-
-    item.onclick = () => {
-      alert(exercise["instructions"])
-    }
-
     //Create a button to remove the exercise from the list
     const del = document.createElement("button")
     del.classList.add("btn","btn-danger","ms-3")
     del.innerHTML = "<i class='bi bi-trash3'></i>"
-    // del.innerText = "Remove Exercise"
+
+    // Create button to popup exercise instruction
+    const instruction = document.createElement("i")
+    instruction.onclick = e => {
+      const modalTitle = document.getElementById("exerciseInstructionTitle")
+      modalTitle.innerText = exercise["name"]
+
+      const descriptionModal = document.getElementById("modal-body")
+      descriptionModal.innerText = exercise["instructions"]
+      instructionModal.show()
+    }
+    const exerciseInstructionClose = document.getElementById('exerciseInstructionClose')
+    exerciseInstructionClose.onclick = e => instructionModal.hide()
+    instruction.classList.add("bi", "bi-info-circle", "btn", "btn-warning", "ms-3", "my-1")
 
     //Handle the click event on the delete button
     del.onclick = (e) => {
@@ -383,6 +410,9 @@
 
     //Add the title to the container
     item.appendChild(title)
+
+    //Append the instructions button the list of excercises
+    item.appendChild(instruction)
 
     //Add the delete button to the container
     item.appendChild(del)
