added gource video to about us page

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -86,6 +86,11 @@
                 </svg></a>
             </div>
         </div>
+        <h2 class="text-center mt-5">Our Journey Here</h2>
+        <video width="100%" controls class="img-thumbnail mb-3" autoplay>
+            <source src="/video/gource.webm" type="video/webm">
+            Your browser does not support the video tag.
+        </video>
     </div>
 </div>
 
