--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/aboutUs}">
+                        <a class="dropdown-item" sec:authorize="isAnonymous() || isAuthenticated() || isFullyAuthenticated()" th:href="@{/aboutUs}">
                             <i class="bi bi-person-vcard"></i><button type="button" class="btn w-100">About Us</button>
                         </a>
                     </li>
