added register button for unauthenticated users

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,7 +9,7 @@
             <a class="navbar-brand" href="/landing">
                 <img height="80px" src="/img/logo.gif">
             </a>
-            <div class="dropdown ms-auto me-3">
+            <div class="dropdown ms-auto me-5">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                     Menu
@@ -46,6 +46,11 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div sec:authorize="isAnonymous()">
+                <form th:action="@{/register}" method="post" class="logout-button-form">
+                    <button class="btn btn-primary" type="submit">Register</button>
+                </form>
             </div>
             <div sec:authorize="isAuthenticated">
                 <form th:action="@{/logout}" method="post" class="logout-button-form">
