--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -48,7 +48,7 @@
                 </ul>
             </div>
             <div sec:authorize="isAnonymous()">
-                <form th:action="@{/register}" method="post" class="logout-button-form">
+                <form th:action="@{register}" method="post" class="logout-button-form">
                     <button class="btn btn-primary" type="submit">Register</button>
                 </form>
             </div>
