aboutUs and landing page

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -20,12 +20,12 @@
         <h1 class="mt-3">Project</h1>
     </div>
 
-    <p class="mt-3">Health Points Fitness is a full-stack application created by four student veterans meant to incentivize fitness and facilitate connections of like-minded individuals. The coding languages utilized in this application include Java, Javascript, HTML, and CSS.  Frameworks include Bootstrap css and Thymeleaf.  API Ninja's Exercise API is utilized during the creation of challenges. The deployment of the site was handled using Dokku.</p>
+    <p class="m-3">Health Points Fitness is a full-stack application created by four student veterans meant to incentivize fitness and facilitate connections of like-minded individuals. The coding languages utilized in this application include Java, Javascript, HTML, and CSS.  Frameworks include Bootstrap CSS and Thymeleaf.  API Ninja's Exercise API is utilized during the creation of challenges. The deployment of the site was handled using Dokku.</p>
 
 
     <h2 class="text-center mt-5">Meet the Developers</h2>
 
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center mb-5">
         <!-- Hector Card -->
         <div class="col-md-4 col-lg-6 card text-center bg-dark text-white m-2 p-0" style="width: 14rem; height: 22rem;">
             <img src="img/hector_pic.jpeg" class="card-img-top rounded-circle p-2" alt="...">
