--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,9 +8,7 @@
     <title>Login</title>
     <th:block th:replace="~{fragments/header.html :: header}"></th:block>
     <style>
-        .hexBg {
-            background-image: url("/img/hex.png");
-        }
+
     </style>
 </head>
 
@@ -18,7 +16,7 @@
 <!-- Navbar -->
 <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 <div class="container mt-5">
-    <div class="row hexBg p-5 rounded my-5 d-flex justify-content-center">
+    <div class="row bg-light p-5 rounded my-5 d-flex justify-content-center">
         <div class="col-lg-6 d-flex justify-content-center align-items-center">
             <img src="/img/register.webp" class="rounded" style="width: 100%">
         </div>
