--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src='https://meet.jit.si/external_api.js'></script>
     <style>
         .highScore {
             font-family: "Press Start 2P", Serif;
@@ -150,6 +151,8 @@
     <!-- Paths Examples -->
     <h3 class="text-center">Paths</h3>
     <hr class="p-1 rounded" style="color: black;">
+
+    <div id="meet"></div>
 <!--    <div class="row d-flex justify-content-evenly align-items-center mb-5 redirect">-->
 <!--        <a th:each="path : ${paths}" href="#/login" class="d-flex col-lg-2 col-md-3 col-sm-6 p-0 m-1 my-2 shadowAnimation">-->
 <!--            <div class="text-center border border-primary border-1 card p-0">-->
@@ -175,54 +178,6 @@
             </a>
         </div>
     </div>
-
-<!--    &lt;!&ndash; High Score Section &ndash;&gt;-->
-<!--    <h4 class="leaderboard text-center mt-5">High Scores!</h4>-->
-<!--    <hr class="p-1 rounded" style="color: black;">-->
-<!--    <div class="row mb-5">-->
-<!--        &lt;!&ndash; Week High Score &ndash;&gt;-->
-<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
-<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <h5 class="text-center m-0" style="color: #849324">This Week</h5>-->
-<!--                </div>-->
-<!--                <div class="card-body" style="background-color: #849324">-->
-<!--                    <div id="typewriter1" class="py-2"></div>-->
-<!--                    <div id="typewriter2" class="py-2"></div>-->
-<!--                    <div id="typewriter3" class="py-2"></div>-->
-<!--                    <div id="typewriter4" class="py-2"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; Month High Score &ndash;&gt;-->
-<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
-<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <h5 class="text-center m-0" style="color:  #849324">This Month</h5>-->
-<!--                </div>-->
-<!--                <div class="card-body" style="background-color: #849324">-->
-<!--                    <div id="typewriter5" class="py-2"></div>-->
-<!--                    <div id="typewriter6" class="py-2"></div>-->
-<!--                    <div id="typewriter7" class="py-2"></div>-->
-<!--                    <div id="typewriter8" class="py-2"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; All Time High Score &ndash;&gt;-->
-<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
-<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <h5 class="text-center m-0" style="color:  #849324">All Time</h5>-->
-<!--                </div>-->
-<!--                <div class="card-body" style="background-color: #849324">-->
-<!--                    <div id="typewriter9" class="py-2"></div>-->
-<!--                    <div id="typewriter10" class="py-2"></div>-->
-<!--                    <div id="typewriter11" class="py-2"></div>-->
-<!--                    <div id="typewriter12" class="py-2"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
 
     <!-- Tutorial Modals -->
     <div class="modal" id="howTo1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
@@ -455,6 +410,20 @@
 </footer>
 
 <script>
+    //Wait for the page to load first
+    setTimeout(()=>{
+        //Jitsi meet for user's room
+        const domain = 'meet.jit.si';
+        const options = {
+            roomName: 'health_points_fitness.us',
+            width: '100%',
+            height: 700,
+            parentNode: document.querySelector('#meet'),
+            displayName : "user1"
+        };
+        const api = new JitsiMeetExternalAPI(domain, options);
+    },200)
+
     // Redirect to Login
     document.getElementById("loginBtn").onclick = (e) => {
         e.preventDefault()
