--- a/src/main/resources/templates/users/friends.html
+++ b/src/main/resources/templates/users/friends.html
@@ -115,7 +115,7 @@
             }
         }
 
-        const endpoint = "https://" + window.location.host + "/users/api/v1/search_friends";
+        const endpoint = "/users/api/v1/search_friends";
         console.log(endpoint)
         console.log(token)
         //Create a post request to the backend
@@ -194,7 +194,7 @@
                         console.log("Unfriend request for " + username.innerText)
 
                         //Fetch request to the unfriend route
-                        const request = await fetch("https://" + location.host + "/users/api/v1/unfriend_request", {
+                        const request = await fetch("/users/api/v1/unfriend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -287,7 +287,7 @@
                         e.preventDefault();
                         console.log("Deleting pending sent friend request for " + username.innerText)
 
-                        const request = await fetch("https://" + location.host + "/users/api/v1/delete_friend_request", {
+                        const request = await fetch("/users/api/v1/delete_friend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -377,7 +377,7 @@
                         console.log("Accepting friend request from " + username.innerText)
 
                         //Create a request to accept the friend request
-                        const request = await fetch("https://" + location.host + "/users/api/v1/accept_friend_request", {
+                        const request = await fetch("/users/api/v1/accept_friend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -405,7 +405,7 @@
                         console.log("Denying friend request from " + username.innerText)
 
                         //Create a request to deny the friend request
-                        const request = await fetch("https://" + location.host + "/users/api/v1/deny_friend_request", {
+                        const request = await fetch("/users/api/v1/deny_friend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -474,7 +474,7 @@
                     e.preventDefault();
 
                     const sendFriendRequest = async u => {
-                        const endp = "https://" + location.host + "/users/api/v1/add_friend"
+                        const endp = "/users/api/v1/add_friend"
 
                         const request = await fetch(endp, {
                             method: "POST",
@@ -567,7 +567,7 @@
                     unblockButton.onclick = async e => {
                         e.stopPropagation();
                         e.preventDefault();
-                        const request = await fetch("https://" + location.host + "/users/api/v1/unblock_request", {
+                        const request = await fetch("/users/api/v1/unblock_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
@@ -615,7 +615,7 @@
                         //TODO: Send unfriend request
                         console.log("Unfriending " + username.innerText);
 
-                        const request = await fetch("https://" + location.host + "/users/api/v1/unfriend_request", {
+                        const request = await fetch("/users/api/v1/unfriend_request", {
                             method: "POST",
                             credentials: "include",
                             headers: {
