--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
-        .highScore {
-            font-family: "Press Start 2P", Serif;
-            font-size: 12px;
-        }
-        .leaderboard {
-            font-family: "Press Start 2P", Serif;
-        }
+        /*.highScore {*/
+        /*    font-family: "Press Start 2P", Serif;*/
+        /*    font-size: 12px;*/
+        /*}*/
+        /*.leaderboard {*/
+        /*    font-family: "Press Start 2P", Serif;*/
+        /*}*/
         #bannerDiv {
             border: #01295f 2px;
             background-image: url("/img/hex.png");
